--- a/monkeytype_multiplayer_app/pubspec.yaml
+++ b/monkeytype_multiplayer_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
   flutter_staggered_grid_view: ^0.7.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
