--- a/monkeytype_multiplayer_app/pubspec.yaml
+++ b/monkeytype_multiplayer_app/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_svg: ^2.0.17
   flutter_staggered_grid_view: ^0.7.0
   provider: ^6.1.2
+  get: ^4.7.2
+  fl_chart: ^0.70.2
 
 dev_dependencies:
   flutter_test:
