--- a/monkeytype_multiplayer_app/pubspec.yaml
+++ b/monkeytype_multiplayer_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   provider: ^6.1.2
   get: ^4.7.2
   fl_chart: ^0.70.2
+  http: ^1.3.0
+  shared_preferences: ^2.5.2
 
 dev_dependencies:
   flutter_test:
